--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint ./src/**/*.js",
     "test:unit": "mocha --compilers js:babel-core/register --recursive",
     "test": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- --compilers js:babel-core/register --recursive",
-    "doc": "jsdoc -c ./conf.json -r -R README.md"
+    "doc": "jsdoc -c ./conf.json -r -R README.md",
+    "coverage": "cat ./coverage/lcov.info | coveralls"
   },
   "author": "wuqiang",
   "repository": {
@@ -29,6 +30,7 @@
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
+    "coveralls": "^2.13.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
