--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "wq-fel",
-  "version": "0.1.2",
+  "version": "0.1.4",
   "description": "web front-end library",
   "keywords": [
     "utils",
     "common",
     "js"
   ],
-  "main": "./dist/index.js",
+  "main": "./index.js",
   "scripts": {
-    "prepublish": "npm run build",
+    "npmpublish": "rimraf ./dist && npm run build:js && npm run copy && cd ./dist && npm publish",
     "build": "npm run clean && npm run lint && npm test && npm run build:js && npm run doc",
     "build:js":"babel src -d dist",
     "lint": "eslint ./src/**/*.js",
@@ -17,7 +17,8 @@
     "test": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- --compilers js:babel-core/register --recursive",
     "clean": "rimraf ./dist & rimraf ./coverage & rimraf ./docs",
     "doc": "jsdoc -c ./conf.json -r -R README.md",
-    "coverage": "cat ./coverage/lcov.info | coveralls"
+    "coverage": "cat ./coverage/lcov.info | coveralls",
+    "copy": "cp -rf package.json ./dist && cp -rf README.md ./dist"
   },
   "author": "wuqiang",
   "repository": {
