1. 添加dom模块 2. 修改bable编译方式 3. 修改eslint规则

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
         "no-param-reassign": ["error", { "props": false }],
         "no-eval": "off",
         "array-callback-return": "off",
+        "no-new-func": "off",
         "indent": ["error", 4]
     }
 }
